# ICTB-project

./: .gitignore  CMakeLists.txt  ICTB_project.sln  ICTB_project.vgdbproj  README.md  sdkconfig
.visualgdb/CodeDB/ICTB_project.vgdbproj-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  codedb.lck  descriptors_control.rdb  global_variables.npa00  global_variables.npa01  global_variables.npd  global_variables.rdb  gpio.npa00  gpio.npd  gpio.rdb  hello_world_main.npa00  httpd_ws.rdb  i2c_barometer.npa00  i2c_barometer.npd  i2c_barometer.rdb  id_open.hpa00  id_open.hpd  id_open.npa00  id_open.npa01  id_open.npd  id_open.rdb  katech_bt.npa00  katech_bt.npd  katech_bt.rdb  katech_esp_gpio.npa00  katech_esp_gpio.npa01  katech_esp_gpio.npd  katech_esp_gpio.rdb  katech_rgb_led.npa00  katech_rgb_led.npd  katech_rgb_led.rdb  katech_spiffs.npa00  katech_spiffs.npd  katech_spiffs.rdb  led_strip_rmt_ws2812.npa00  led_strip_rmt_ws2812.npd  led_strip_rmt_ws2812.rdb  mac_addr.npa00  mac_addr.npd  (+152 more)
.visualgdb/CodeDB/ICTB_project.vgdbproj-Debug-VisualGDB/AutoPCH/: 2065c.ast  2065c.psf  3375-3509c.ast  3375-3509c.psf  3375c.ast  3375c.psf  944-3375c.ast  944-3375c.psf  944-3446-3375c.ast  944-3446-3375c.psf  944-3446c.ast  944-3446c.psf  944c.ast  944c.psf  962-944c.ast  962-944c.psf  962-965-944c.ast  962-965-944c.psf  962-965c.ast  962-965c.psf  962c.ast  962c.psf  964c.ast  964c.psf  965-944-966c.ast  965-944-966c.psf  965-944c.ast  965-944c.psf  965c.ast  965c.psf  966-965c.ast  966-965c.psf  966c.ast  966c.psf  967c.ast  967c.psf
.visualgdb/CodeDB/ICTB_project.vgdbproj-Tests (Debug)-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  codedb.lck  main.npa00  main.npd  main.rdb
.visualgdb/VisualGDBCache/ICTB_project-Debug-VisualGDB/: ImplicitCompilerFlags.xml  MemoryUtilizationReport.xml  UpToDateChecklist.db
.visualgdb/VisualGDBCache/ICTB_project-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-02f11622df2fa8ed17d7.json  cache-v2-3d7a1cd3964e775f4fcb.json  cache-v2-4308993b38da33a000ec.json  cache-v2-44e48ffd2c6aa5d93c89.json  cache-v2-76d365bc47bdf3f553af.json  (+272 more)
.visualgdb/VisualGDBCache/ICTB_project-Tests__Debug_-VisualGDB/: ImplicitCompilerFlags.xml  MemoryUtilizationReport.xml  UpToDateChecklist.db
components/global_variables/: CMakeLists.txt  global_variables.c  global_variables.h
components/gpio/: CMakeLists.txt  katech_esp_gpio.c  katech_esp_gpio.h
components/i2c_barometer/: CMakeLists.txt  i2c_barometer.c  i2c_barometer.h
components/id_open/: CMakeLists.txt  id_open.c  id_open.c~RF147345fb.TMP  id_open.h  odid_wifi.h  opendroneid.c  opendroneid.h  utm.h  wifi.c
components/katech_bt/: CMakeLists.txt  katech_bt.c  katech_bt.h
components/katech_rgb_led/: CMakeLists.txt  katech_rgb_led.c  katech_rgb_led.h
components/katech_spiffs/: CMakeLists.txt  katech_spiffs.c
components/nmea_parser/: CMakeLists.txt  nmea_parser.c  nmea_parser.h
main/: CMakeLists.txt  main.c
(+138 files in other folders)
