idf_component_register(
                    SRCS main.c
                    PRIV_INCLUDE_DIRS
                    	../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/host/bluedroid/api/include/api
                    	../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/fatfs/test_fatfs_host/sdkconfig
                    	../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/tinyusb/tinyusb/hw/bsp/esp32s2/components/led_strip/include
                    	../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/tinyusb/tinyusb/hw/bsp/esp32s2/components/led_strip/include
                    	../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/tinyusb/tinyusb/hw/bsp/esp32s2/components/led_strip/include)
