#Created by VisualGDB. Right-click on the component in Solution Explorer to edit properties using convenient GUI.

idf_component_register(
	SRCS katech_bt.c
	INCLUDE_DIRS "."
	PRIV_INCLUDE_DIRS
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/include/esp32s3/include
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/include/esp32s3/include
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/include/esp32s3/include
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/include/esp32s3/include
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/include/esp32s3/include
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/host/bluedroid/api/include/api
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/fatfs/test_fatfs_host/sdkconfig
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/bt/host/bluedroid/api/include/api
		../../../../../../../../SysGCC/esp32/esp-idf/v4.4.1/components/fatfs/test_fatfs_host/sdkconfig)
